# lingcompare

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
examples/: README.md  es_interlinear.txt  es_wordlist.csv  fr_interlinear.txt  fr_wordlist.csv  pt_interlinear.txt  pt_wordlist.csv
lingcompare/app/: Home.py  state.py
lingcompare/app/pages/: 1_Load_Corpora.py  2_Phonology.py  3_Lexicon_Cognates.py  4_Grammar.py  5_Report.py  6_Mass_Compare.py
lingcompare/core/: cognate_engine.py  export.py  gloss_match.py  ingest_docx.py  ingest_interlinear.py  ingest_wordlist.py  ingest_xlsx.py  morph_typology.py  phon_align.py  phon_inventory.py  schema.py  scoring.py
tests/: test_cognate_engine.py  test_export.py  test_gloss_match.py  test_ingest_interlinear.py  test_ingest_wordlist.py  test_ingest_xlsx_docx.py  test_phon_align.py  test_phon_inventory.py  test_schema.py  test_scoring.py
tests/fixtures/: es_interlinear.txt  es_swadesh.csv  pt_interlinear.txt  pt_swadesh.csv
